...
          _buildSummaryRow('Tip', 'Rp 500'),
          const Divider(height: 24, thickness: 1),
          _buildSummaryRow('Total', 'Rp ${cart.total.toStringAsFixed(0)}', isTotal: true),
          if (change > 0 && selectedPaymentMethod == 'cash')
            Padding(
              padding: const EdgeInsets.only(top: 12.0),
              child: _buildSummaryRow('Kembalian', 'Rp ${change.toStringAsFixed(0)}', isChange: true),
            ),
        ],
      ),
    );
  }

...
          _buildSummaryRow('Received', 'Rp ${double.tryParse(receivedController.text)?.toStringAsFixed(0) ?? "0"}'),
          const SizedBox(height: 24),
          const Text('Payment Method', style: TextStyle(fontSize: 16, fontWeight: FontWeight.bold)),
          const SizedBox(height: 12),
          Row(
            children: [
              _buildPaymentMethodButton('Cash', Icons.money, 'cash', setState),
              const SizedBox(width: 12),
              _buildPaymentMethodButton('Debit Card', Icons.credit_card, 'debit', setState),
              const SizedBox(width: 12),
              _buildPaymentMethodButton('E-Wallet', Icons.account_balance_wallet, 'qris', setState),
            ],
          ),
...
        onPressed: (selectedTableId == null || selectedPaymentMethod == null || customerNameController.text.isEmpty || isSubmitting)
            ? null
            : () => _processOrder(setState, change),
        style: ElevatedButton.styleFrom(backgroundColor: kPrimaryColor, shape: RoundedRectangleBorder(borderRadius: BorderRadius.circular(12))),
        child: isSubmitting
            ? const SizedBox(width: 24, height: 24, child: CircularProgressIndicator(strokeWidth: 2, color: kBackgroundColor))
            : const Text('Order Completed', style: TextStyle(fontSize: 18, fontWeight: FontWeight.bold, color: kBackgroundColor)),
      ),
    );
  }

  Widget _buildPaymentCalculator() {
    return StatefulBuilder(
...
            onPressed: () => setState(() => receivedController.text = widget.cart.total.toStringAsFixed(0)),
            style: ElevatedButton.styleFrom(
              padding: const EdgeInsets.symmetric(vertical: 16),
              backgroundColor: kPrimaryColor,
              shape: RoundedRectangleBorder(borderRadius: BorderRadius.circular(12)),
            ),
            child: const Text('Apply', style: TextStyle(fontSize: 16, fontWeight: FontWeight.bold, color: kBackgroundColor)),
          ),
        ),
      ],
    );
  }

...
