...
                  ),
                ),
                const SizedBox(height: 48),

                // Email Input
                TextFormField(
                  key: const Key('email_field'),

                  controller: controller.emailController,
                  keyboardType: TextInputType.emailAddress,
                  decoration: InputDecoration(
                    hintText: 'Email',
                    fillColor: kLightGreyColor,
...
                  validator: controller.validateEmail,
                ),
                const SizedBox(height: 16),

                // Password Input
                TextFormField(
                  key: const Key('password_field'),
                  
                  controller: controller.passwordController,
                  obscureText: true,
                  decoration: InputDecoration(
                    hintText: 'Password',
                    fillColor: kLightGreyColor,
...
                // Login Button
                Consumer<AuthService>(
                  builder: (context, authService, child) {
                    return SizedBox(
                      width: double.infinity,
                      child: ElevatedButton(
                        key: const Key('login_btn'),
                        
                        onPressed: authService.isLoading
                            ? null
                            : controller.submitLogin,
                        style: ElevatedButton.styleFrom(
                          padding: const EdgeInsets.symmetric(vertical: 18),
...
